Float layer should ignore offsets from ancestor inline layers under containing block

- When calculating layer location, we should traverse containers
  instead of parents, because containers instead of parents affect
  locations of children. This ensures we get correct location for
  floating layer.

- When calculating layer offset in an ancestor, for a float layer,
  we should skip inline ancestors below the containing block.

BUG=683576
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2647383004
Cr-Commit-Position: refs/heads/master@{#445592}

Former-commit-id: 43437042d29fc936bb50f73cbe29907135936f47